new/k8s/namespace.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "gemtc",
    "labels": {
      "name": "gemtc"
    }
  }
}
