new/k8s/gemtc-db-init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gemtc-db-init
  namespace: gemtc
  labels:
    app: gemtc-db-init
spec:
  imagePullSecrets:
  - name: registry-credentials
  restartPolicy: Never
  containers:
  - name: run-liquibase
    image: registry.drugis.org/liquibase-gemtc
