new/k8s/gemtc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gemtc
  namespace: gemtc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gemtc
  template:
    metadata:
      labels:
        app: gemtc
    spec:
      imagePullSecrets:
      - name: registry-credentials
      volumes:
      - name: ssl-volume
        configMap:
          name: certs
      containers:
      - name: gemtc
        image: registry.drugis.org/gemtc-closed
        volumeMounts:
        - name: ssl-volume
          mountPath: /var/lib/gemtc/ssl
        ports:
        - name: gemtc
          containerPort: 3001
