new/k8s/patavi-db-init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: patavi-db-init
  namespace: gemtc
  labels:
    app: patavi-db-init
spec:
  imagePullSecrets:
  - name: registry-credentials
  containers:
  - name: update-schema
    image: postgres:10.8
    command: ['sh', '-c', 'psql -h postgres -f /patavi-data/patavi-schema.sql']
    volumeMounts:
    - name: patavi-data
      mountPath: /patavi-data
  restartPolicy: Never
  volumes:
  - name: patavi-data
    emptyDir: {}
