new/k8s/patavi-smaa-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patavi-smaa-worker
  namespace: gemtc
  labels:
    app: patavi-smaa-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patavi-smaa-worker
  template:
    metadata:
      labels:
        app: patavi-smaa-worker
    spec:
      containers:
      - name: patavi-smaa-worker
        image: "addis/patavi-smaa-worker"
