new/k8s/patavi-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: patavi-server
  namespace: addis-poc-devtest
spec:
  type: LoadBalancer
  ports:
  - port: 3000
  selector:
    app: patavi-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patavi-server
  namespace: gemtc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patavi-server
  template:
    metadata:
      labels:
        app: patavi-server
    spec:
      containers:
      - name: patavi-server
        image: addis/patavi-server
        ports:
        - name: patavi-server
          containerPort: 3000
